[package]
name = "dicethulhu"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.8", features = ["dynamic"] }
bevy_rapier2d = { version = "0.16", features = ["simd-stable", "debug-render"] }
bevy-inspector-egui = "0.12"
rand = "0.8"
